--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
-body
-  background: #e9e9e9
-  font-family: 'Roboto', sans-serif
-  text-align: center
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-
-span
+.footer-author
   color: #666
   font-size: 12px
   display: block
