--- a/css/ravaj.css
+++ b/css/ravaj.css
@@ -51,11 +51,12 @@ p {
             rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0.7)
         ),
-        url(header-bg.jpg)
+        url(../images/backgrounds/header-bg.jpg)
         center;
     background-size: cover;
     height: 550px;
 }
+
 
 .header .navbar {
     padding-top: 20px;
