--- a/css/ravaj.css
+++ b/css/ravaj.css
@@ -51,7 +51,7 @@ p {
             rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0.7)
         ),
-        url('header-bg.jpg')
+        url('https://electronicsofthings.com/wp-content/uploads/2016/05/connectedworld.jpg')
         center;
     background-size: cover;
     height: 550px;
